# algo

./: notes.md  pyproject.toml
algo/: search.py  setup_algolia.py
tests/: test_api.py  test_search.py
